--- a/MyCalendar.MVC/Content/Loader.css
+++ b/MyCalendar.MVC/Content/Loader.css
@@ -52,7 +52,7 @@
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #0094ff;
+    border-top: 16px solid #09c;
     width: 20px;
     height: 20px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
