--- a/MyCalendar.MVC/Content/Site.css
+++ b/MyCalendar.MVC/Content/Site.css
@@ -58,7 +58,7 @@
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #0094ff;
+    border-top: 16px solid #09c;
     width: 20px;
     height: 20px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
@@ -141,7 +141,7 @@ textarea {
 
 /* active item */
 .active {
-    color: #0094ff;
+    color: #09c;
 }
 
 /* Add responsiveness - display the form controls vertically instead of horizontally on screens that are less than 800px wide */
@@ -168,4 +168,198 @@ textarea {
 .treeview {
     /*border-top-left-radius: 10px;
     border-top-right-radius: 10px;*/
+}
+
+/* multi level dropdown*/
+#menu {
+
+    font-size: medium;
+}
+
+#menu ul {
+  margin: 0;
+  padding: 0;
+}
+
+#menu .main-menu {
+  display: none;
+}
+
+#tm:checked + .main-menu {
+  display: block;
+}
+
+#menu input[type="checkbox"], 
+#menu ul span.drop-icon {
+  display: none;
+}
+
+#menu li, 
+#toggle-menu, 
+#menu .sub-menu {
+  border-style: solid;
+  border-color: rgba(0, 0, 0, .05);
+}
+
+#menu li, 
+#toggle-menu {
+  border-width: 0 0 1px;
+}
+
+
+#menu .sub-menu {
+  background-color: #343a40;
+  border-width: 1px 1px 0;
+  margin: 0 1em;
+}
+
+#menu .sub-menu li:last-child {
+  border-width: 0;
+}
+
+#menu li, 
+#toggle-menu, 
+#menu a {
+  position: relative;
+  display: block;
+  color: white;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, .125);
+}
+
+#menu,
+#toggle-menu {
+    background-color: #343a40;
+}
+
+#toggle-menu, 
+#menu a {
+  padding: 1em 1.5em;
+}
+
+#menu a {
+  transition: all .125s ease-in-out;
+  -webkit-transition: all .125s ease-in-out;
+}
+
+#menu a:hover {
+  color: #09c;
+  text-decoration: none;
+}
+
+#menu .sub-menu {
+  display: none;
+}
+
+#menu input[type="checkbox"]:checked + .sub-menu {
+  display: block;
+}
+
+#toggle-menu .drop-icon, 
+#menu li label.drop-icon {
+  position: absolute;
+  right: 1.5em;
+  top: 1.25em;
+}
+
+#menu .drop-icon {
+  line-height: 1;
+}
+
+#menu .home-link {
+    font-size: 17px;
+}
+
+#menu li.menu-right {
+    float: right;
+}
+
+@media (max-width: 991.98px) {
+    #toggle-menu {
+        margin: 0px;
+    }
+
+    #menu .home-link {
+        display: none;
+    }
+
+    #menu .container {
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+
+    #menu li.menu-right {
+        float: none;
+    }
+}
+
+@media only screen and (max-width: 64em) and (min-width: 52.01em) {
+  #menu li {
+    width: 33.333%;
+  }
+
+  #menu .sub-menu li {
+    width: auto;
+  }
+}
+
+@media only screen and (min-width: 52em) {
+  #menu .main-menu {
+    display: block;
+  }
+
+  #toggle-menu, 
+  #menu label.drop-icon {
+    display: none;
+  }
+
+  #menu ul span.drop-icon {
+    display: inline-block;
+  }
+
+  #menu li {
+    float: left;
+    border-width: 0 1px 0 0;
+  }
+
+  #menu .sub-menu li {
+    float: none;
+  }
+
+  #menu .sub-menu {
+    border-width: 0;
+    margin: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 140%;
+    z-index: 3000;
+  }
+
+  #menu .sub-menu, 
+  #menu input[type="checkbox"]:checked + .sub-menu {
+    display: none;
+  }
+
+  #menu .sub-menu li {
+    border-width: 0 0 1px;
+  }
+
+  #menu .sub-menu .sub-menu {
+    top: 0;
+    left: 100%;
+  }
+
+  #menu li:hover > input[type="checkbox"] + .sub-menu {
+    display: block;
+  }
+}
+
+/* bootstrap overrides*/
+
+.btn-link {
+    color: #09c !important;
+}
+
+.btn-link a {
+    color: #09c !important;
 }
