--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
 @{
     var Model = ViewData[nameof(BaseVM)] as BaseVM;
     var AppName = ConfigurationManager.AppSettings["AppName"];
+    var version = ConfigurationManager.AppSettings["AppVersion"];
 }
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@AppName</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Site.css?v=@version" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/Loader.css" rel="stylesheet" type="text/css" />
     <!-- forms -->
@@ -24,107 +25,183 @@
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fix fixed-top">
+
+    <nav id="menu" class="fixed-top">
         <div class="container">
-            @Html.ActionLink(AppName, Url.MvcRoute(Section.Home).ActionName, Url.MvcRoute(Section.Home).ControllerName, new { area = "" }, new { @class = "navbar-brand" })
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <label for="tm" id="toggle-menu">@AppName <span class="drop-icon"><span class="fas fa-caret-down"></span></span></label>
+            <input type="checkbox" id="tm">
+            <ul class="main-menu clearfix">
+                <li class="home-link">
+                    @Html.ActionLink(AppName, Url.MvcRoute(Section.Home).ActionName, Url.MvcRoute(Section.Home).ControllerName, new { area = "" })
+                </li>
                 @if (Model != null && Model.User != null)
                 {
-                    <ul class="navbar-nav mr-auto">
-                        @if (Model.AccessibleFeatures.Any(x => x.Id == Features.Calendar))
-                        {
-                            <li class="nav-item">
-                                <div class="dropdown show">
-                                    <a class="nav-link dropdown-toggle" style="@(Model.MenuItem.Home || Model.MenuItem.MultiAdd || Model.MenuItem.Overview || Model.MenuItem.Cronofy ? "color:#0094ff": "")" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <span class="fas fa-calendar-alt"></span> Calendar
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                        <a class="dropdown-item" style="@(Model.MenuItem.Home ? "color:#0094ff": "")" href="@Url.Action(Url.MvcRoute(Section.Home).ActionName, Url.MvcRoute(Section.Home).ControllerName)">
-                                            <span class="fas fa-calendar"></span> Calendar
+                    if (Model.AccessibleFeatures.Any(x => x.Id == Features.Calendar))
+                    {
+                        <li>
+                            <a href="#" style="@(Model.MenuItem.Home || Model.MenuItem.MultiAdd || Model.MenuItem.Overview || Model.MenuItem.Cronofy ? "color:#09c" : "")">
+                                <span class="fas fa-calendar-alt"></span> Calendar
+                                <span class="drop-icon">
+                                    <span class="fas fa-caret-down"></span>
+                                </span>
+                                <label title="Toggle Drop-down" class="drop-icon" for="sm1">
+                                    <span class="fas fa-caret-down"></span>
+                                </label>
+                            </a>
+                            <input type="checkbox" id="sm1">
+                            <ul class="sub-menu">
+                                @if (!Model.MenuItem.Home)
+                                {
+                                    <li>
+                                        <a href="@Url.Action(Url.MvcRoute(Section.Home).ActionName, Url.MvcRoute(Section.Home).ControllerName)" style="@(Model.MenuItem.Home ? "color:#09c" : "")">
+                                            <span class="fas fa-calendar"></span> View Calendar
                                         </a>
-                                        <a class="dropdown-item" style="@(Model.MenuItem.MultiAdd ? "color:#0094ff": "")" href="@Url.Action(Url.MvcRoute(Section.Scheduler).ActionName, Url.MvcRoute(Section.Scheduler).ControllerName)">
-                                            <span class="fas fa-calendar-check"></span> Scheduler
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li>
+                                        <a href="#" style="@(Model.MenuItem.Home ? "color:#09c" : "")">
+                                            <span class="fas fa-calendar"></span> Calendars
+                                            <span class="drop-icon">
+                                                <span class="fas fa-caret-down"></span>
+                                            </span>
+                                            <label title="Toggle Drop-down" class="drop-icon" for="sm2">
+                                                <span class="fas fa-caret-down"></span>
+                                            </label>
                                         </a>
-                                        <a class="dropdown-item" style="@(Model.MenuItem.Overview ? "color:#0094ff": "")" href="@Url.Action(Url.MvcRoute(Section.Overview).ActionName, Url.MvcRoute(Section.Overview).ControllerName)">
-                                            <span class="fas fa-chart-bar"></span> Activity Hub
+                                        <input type="checkbox" id="sm2">
+                                        <ul class="sub-menu">
+                                            @foreach (var userCalendar in Model.UserCalendars.OrderByDescending(x => x.UserCreatedId == Model.User.UserID))
+                                            {
+                                                <li>
+                                                    <a href="#">
+                                                        <span class="fas fa-calendar-check"></span> @userCalendar.Name
+                                                        @if (Model.User.UserID != userCalendar.UserCreatedId)
+                                                        {
+                                                            <span class="badge badge-info text-small">shared by @userCalendar.InviteeName</span>
+                                                        }
+                                                        <span class="float-right">
+                                                            <input type="checkbox" style="display:inline" name="selectedCalendar[]" value="@userCalendar.Id" @(Model.User.UserID == userCalendar.UserCreatedId && userCalendar.Defaulted ? "checked=\"checked\"" : "") />
+                                                        </span>
+                                                    </a>
+                                                </li>
+                                            }
+                                            <!-- submenu-->
+                                            @*<li>
+                                                <a href="#">
+                                                    Item 2.2.2
+                                                    <span class="drop-icon"><span class="fas fa-caret-down"></span></span>
+                                                    <label title="Toggle Drop-down" class="drop-icon" for="sm3"><span class="fas fa-caret-down"></span></label>
+                                                </a>
+                                                <input type="checkbox" id="sm3">
+                                                <ul class="sub-menu">
+                                                    <li><a href="#">Item 3.2.1</a></li>
+                                                    <li><a href="#">Item 3.2.2</a></li>
+                                                </ul>
+                                            </li>*@
+                                            <!-- end submenu -->
+                                        </ul>
+                                    </li>
+                                }
+
+                                <li>
+                                    <a style="@(Model.MenuItem.MultiAdd ? "color:#09c" : "")" href="@Url.Action(Url.MvcRoute(Section.Scheduler).ActionName, Url.MvcRoute(Section.Scheduler).ControllerName)">
+                                        <span class="fas fa-calendar-check"></span> Scheduler
+                                    </a>
+                                </li>
+                                <li>
+                                    <a style="@(Model.MenuItem.Overview ? "color:#09c": "")" href="@Url.Action(Url.MvcRoute(Section.Overview).ActionName, Url.MvcRoute(Section.Overview).ControllerName)">
+                                        <span class="fas fa-chart-bar"></span> Activity Hub
+                                    </a>
+                                </li>
+                                @if (Model.User.CronofyReady != MyCalendar.Enums.CronofyStatus.Disabled)
+                                {
+                                    <li>
+                                        <a style="@(Model.MenuItem.Cronofy ? "color:#09c" : "")" href="@Url.Action(Url.MvcRoute(Section.CronofyProfiles).ActionName, Url.MvcRoute(Section.CronofyProfiles).ControllerName)">
+                                            <span class="fas fa-link"></span> Calendar Sync
                                         </a>
-                                        @if (Model.User.CronofyReady != MyCalendar.Enums.CronofyStatus.Disabled)
-                                        {
-                                            <a class="dropdown-item" style="@(Model.MenuItem.Cronofy ? "color:#0094ff" : "")" href="@Url.Action(Url.MvcRoute(Section.CronofyProfiles).ActionName, Url.MvcRoute(Section.CronofyProfiles).ControllerName)">
-                                                <span class="fas fa-link"></span> Calendar Sync
-                                            </a>
-                                        }
-                                    </div>
-                                </div>
-                            </li>
-                        }
-                        @if (Model.AccessibleFeatures.Any(x => x.Id == Features.Write))
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" style="@(Model.MenuItem.Documents ? "color:#0094ff" : "")" href="@Url.Action(Url.MvcRoute(Section.Document).ActionName, Url.MvcRoute(Section.Document).ControllerName)">
-                                    <span class="fas fa-pencil-alt"></span> Write
-                                </a>
-                            </li>
-                        }
-                        @if (Model.AccessibleFeatures.Any(x => x.Id == Features.ErrandRunner))
-                        {
-                            <li class="nav-item">
-                                <div class="dropdown show">
-                                    <a class="nav-link dropdown-toggle" style="@(Model.MenuItem.ERNewOrder ? "color:#0094ff": "")" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <span class="fas fa-running"></span> Errand Runner
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                        <a class="dropdown-item" style="@(Model.MenuItem.ERNewOrder ? "color:#0094ff": "")" href="@Url.Action(Url.MvcRoute(Section.ErrandRunnerNewOrder).ActionName, Url.MvcRoute(Section.ErrandRunnerNewOrder).ControllerName)">
-                                            <span class="fas fa-user-edit"></span> New Customer/Order
-                                        </a>
-                                    </div>
-                                </div>
-                            </li>
-                        }
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <div class="dropdown show">
-                                <a class="nav-link dropdown-toggle" style="@(Model.MenuItem.Settings ? "color:#0094ff": "")" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="fas fa-user"></span> @Model.User.Name
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item" style="@(Model.MenuItem.Settings ? "color:#0094ff": "")" href="@Url.Action(Url.MvcRoute(Section.Profile).ActionName, Url.MvcRoute(Section.Profile).ControllerName)">
-                                        <span class="fas fa-user-edit"></span> Settings
-                                    </a>
-                                    <a class="dropdown-item" href="@Url.Action(Url.MvcRoute(Section.Logout).ActionName, Url.MvcRoute(Section.Logout).ControllerName)">
-                                        <span class="fas fa-sign-out-alt"></span> Logout
-                                    </a>
-                                </div>
-                            </div>
+                                    </li>
+                                }
+                            </ul>
                         </li>
-                    </ul>
+                    }
+
+                    if (Model.AccessibleFeatures.Any(x => x.Id == Features.Write))
+                    {
+                        <li>
+                            <a style="@(Model.MenuItem.Documents ? "color:#09c" : "")" href="@Url.Action(Url.MvcRoute(Section.Document).ActionName, Url.MvcRoute(Section.Document).ControllerName)">
+                                <span class="fas fa-pencil-alt"></span> Write
+                            </a>
+                        </li>
+                    }
+
+                    if (Model.AccessibleFeatures.Any(x => x.Id == Features.ErrandRunner))
+                    {
+                        <li>
+                            <a href="#" style="@(Model.MenuItem.ERNewOrder ? "color:#09c" : "")">
+                                <span class="fas fa-running"></span> Errand Runner
+                                <span class="drop-icon">
+                                    <span class="fas fa-caret-down"></span>
+                                </span>
+                                <label title="Toggle Drop-down" class="drop-icon" for="sm3">
+                                    <span class="fas fa-caret-down"></span>
+                                </label>
+                            </a>
+                            <input type="checkbox" id="sm3">
+                            <ul class="sub-menu">
+                                <li>
+                                    <a style="@(Model.MenuItem.ERNewOrder ? "color:#09c": "")" href="@Url.Action(Url.MvcRoute(Section.ErrandRunnerNewOrder).ActionName, Url.MvcRoute(Section.ErrandRunnerNewOrder).ControllerName)">
+                                        <span class="fas fa-user-edit"></span> New Customer/Order
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    }
+
+                    <li class="menu-right">
+                        <a href="#" style="@(Model.MenuItem.Settings ? "color:#09c" : "")">
+                            <span class="fas fa-user"></span> @Model.User.Name
+                            <span class="drop-icon">
+                                <span class="fas fa-caret-down"></span>
+                            </span>
+                            <label title="Toggle Drop-down" class="drop-icon" for="sm4"><span class="fas fa-caret-down"></span></label>
+                        </a>
+                        <input type="checkbox" id="sm4">
+                        <ul class="sub-menu">
+                            <li>
+                                <a style="@(Model.MenuItem.Settings ? "color:#09c": "")" href="@Url.Action(Url.MvcRoute(Section.Profile).ActionName, Url.MvcRoute(Section.Profile).ControllerName)">
+                                    <span class="fas fa-user-edit"></span> Settings
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action(Url.MvcRoute(Section.Logout).ActionName, Url.MvcRoute(Section.Logout).ControllerName)">
+                                    <span class="fas fa-sign-out-alt"></span> Logout
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+
                 }
                 else
                 {
-                    <ul class="navbar-nav mr-auto"></ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action(Url.MvcRoute(Section.Login).ActionName, Url.MvcRoute(Section.Login).ControllerName)">
-                                <span class="fas fa-sign-in-alt"></span> Login
-                            </a>
-                        </li>
-                    </ul>
+                    <li class="menu-right">
+                        <a href="@Url.Action(Url.MvcRoute(Section.Login).ActionName, Url.MvcRoute(Section.Login).ControllerName)">
+                            <span class="fas fa-sign-in-alt"></span> Login/Register
+                        </a>
+                    </li>
                 }
-            </div>
+
+            </ul>
         </div>
     </nav>
-
     <div class="container body-content">
         <br />
         <div id="cover-spin"></div>
         @RenderBody()
         <hr />
         <footer>
-            <small>&copy; @DateTime.Now.Year - @AppName <a href="/home/changelog" class="float-right">v2.0 BETA</a></small>
+            <small>&copy; @DateTime.Now.Year - @AppName <a href="/home/changelog" class="float-right">v@(version) BETA</a></small>
         </footer>
     </div>
 
