--- a/MyCalendar.MVC/Views/Home/Index.cshtml
+++ b/MyCalendar.MVC/Views/Home/Index.cshtml
@@ -184,7 +184,7 @@ else
                 function GenerateCalender(events) {
                     $('#calender').fullCalendar('destroy');
                     $('#calender').fullCalendar({
-                        contentHeight: 450,
+                        contentHeight: 550,
                         defaultDate: new Date(),
                         timeFormat: 'h(:mm)a',
                         longPressDelay: 150,
@@ -341,7 +341,7 @@ else
                         return false;
                     }
                     else {
-                        if (ownCalendarIds.some(item => item != selectedCalendars[0])) {
+                        if (!ownCalendarIds.some(item => item == selectedCalendars[0])) {
                             alert('You must select one Calendar in the menu that is yours.');
                             return false;
                         }
